# serializer version: 1
# name: test_initial_sync[municipality-False-False]
  dict({
    'beginn': '12.05.2025',
    'bemerkung': None,
    'customArchiviert': False,
    'customArchivnummer': None,
    'customDringlDir': False,
    'customDringlVorstoesser': False,
    'customDringlgewaehrt': False,
    'customErledigungsart': None,
    'customFederfuehrendesAmt': dict({
      'displayName': 'Amt für Digitalisierungsfragen',
      'guid': '035641ae-a54a-49f7-bb39-a4e926d17c1e',
      'url': '/Amt/035641aea54a49f7bb39a4e926d17c1e',
    }),
    'customGemeinde': None,
    'customGeschaeftsart': dict({
      'displayName': '14.310 Baugesuch',
      'guid': '5afa4fc5-153d-48e9-b273-89de156faa39',
      'url': '/Geschäftsart/5afa4fc5153d48e9b27389de156faa39',
    }),
    'customGeschaeftsverantwortung': None,
    'customGrundbucheintrag': True,
    'customHerkunft': dict({
      'displayName': 'Gemeinden/Körperschaften',
      'guid': '52c4318d-77cc-4163-bf82-eaa5ab68c43a',
      'url': '/Herkunft/52c4318d77cc4163bf82eaa5ab68c43a',
    }),
    'customHerkunftsNummer': '2025-1',
    'customKoordinatenX': 134333.4,
    'customKoordinatenY': 99991230.0,
    'customOrdnungsgemaess': False,
    'customParzellenNr': None,
    'customPoststempel': '14.05.2025',
    'customRRGeschaeft': False,
    'customRegistraturplan': dict({
      'displayName': '4-6-1 Verfügungen, Fach- und Amtsberichte, Stellungnahmen',
      'guid': '582b31c8-32b3-41f2-9fe9-283ad6fbbd8d',
      'url': '/Ordnungssystem/582b31c832b341f29fe9283ad6fbbd8d',
    }),
    'customSachbearbeiter': None,
    'customUeberwiesen': False,
    'customVerfahrenseingang': '14.05.2025',
    'customVerfahrensende': None,
    'customVerfahrensstand': dict({
      'displayName': 'Geschäft eröffnet',
      'guid': '500fcc48-e9de-4b17-96d0-85f7dd001613',
      'url': '/Verfahrensstand/500fcc48e9de4b1796d085f7dd001613',
    }),
    'customVorstossBeantwortet': False,
    'customWiedereingang': None,
    'custommitVoranfrage': False,
    'dokumenteExplorer': list([
      dict({
        'displayName': '1 Baugesuch Parzelle(n) 473, 2592',
        'guid': '25f8fb3f-d0b0-4a8e-addb-fbc342ec9749',
        'url': '/Ordner/25f8fb3fd0b04a8eaddbfbc342ec9749',
      }),
    ]),
    'ende': None,
    'geschaeftseigner': dict({
      'displayName': 'Generalsekretariat; GS',
      'guid': 'e59bbb03-d396-40c6-b0f2-61a46862a0fa',
      'url': '/Organisationseinheit/e59bbb03d39640c6b0f261a46862a0fa',
    }),
    'geschaeftsstatus': 'InBearbeitung',
    'guid': '0e1d8257-6105-4737-9839-b402e2d46478',
    'laufnummer': '2025-STA-150',
    'lifecycleStatus': 'InBearbeitung',
    'parentkey': 'ebaube:1',
    'signatur': None,
    'titel': 'Miss south speak industry. Region participant report. Responsibility worker pressure factor. Conference onto fear respond wear wide.',
    'typeName': 'Geschäft',
    'version': 0,
    'zugriffsteuerung': 'Restriktiv',
  })
# ---
# name: test_initial_sync[municipality-False-True]
  dict({
    'beginn': '12.05.2025',
    'bemerkung': None,
    'customArchiviert': False,
    'customArchivnummer': None,
    'customDringlDir': False,
    'customDringlVorstoesser': False,
    'customDringlgewaehrt': False,
    'customErledigungsart': dict({
      'displayName': 'Art. 16/22 RPG negativ',
      'guid': '4d84540b-9c2d-43ea-9ae3-3ca10cb0cbb7',
      'url': '/Erledigungsart/4d84540b9c2d43ea9ae33ca10cb0cbb7',
    }),
    'customFederfuehrendesAmt': dict({
      'displayName': 'Amt für Digitalisierungsfragen',
      'guid': '035641ae-a54a-49f7-bb39-a4e926d17c1e',
      'url': '/Amt/035641aea54a49f7bb39a4e926d17c1e',
    }),
    'customGemeinde': None,
    'customGeschaeftsart': dict({
      'displayName': '14.310 Baugesuch',
      'guid': '5afa4fc5-153d-48e9-b273-89de156faa39',
      'url': '/Geschäftsart/5afa4fc5153d48e9b27389de156faa39',
    }),
    'customGeschaeftsverantwortung': None,
    'customGrundbucheintrag': True,
    'customHerkunft': dict({
      'displayName': 'Gemeinden/Körperschaften',
      'guid': '52c4318d-77cc-4163-bf82-eaa5ab68c43a',
      'url': '/Herkunft/52c4318d77cc4163bf82eaa5ab68c43a',
    }),
    'customHerkunftsNummer': '2025-1',
    'customKoordinatenX': 134333.4,
    'customKoordinatenY': 99991230.0,
    'customOrdnungsgemaess': False,
    'customParzellenNr': None,
    'customPoststempel': '14.05.2025',
    'customRRGeschaeft': False,
    'customRegistraturplan': dict({
      'displayName': '4-6-1 Verfügungen, Fach- und Amtsberichte, Stellungnahmen',
      'guid': '582b31c8-32b3-41f2-9fe9-283ad6fbbd8d',
      'url': '/Ordnungssystem/582b31c832b341f29fe9283ad6fbbd8d',
    }),
    'customSachbearbeiter': None,
    'customUeberwiesen': False,
    'customVerfahrenseingang': '14.05.2025',
    'customVerfahrensende': None,
    'customVerfahrensstand': dict({
      'displayName': 'Geschäft eröffnet',
      'guid': '500fcc48-e9de-4b17-96d0-85f7dd001613',
      'url': '/Verfahrensstand/500fcc48e9de4b1796d085f7dd001613',
    }),
    'customVorstossBeantwortet': False,
    'customWiedereingang': None,
    'custommitVoranfrage': False,
    'dokumenteExplorer': list([
      dict({
        'displayName': '1 Baugesuch Parzelle(n) 473, 2592',
        'guid': '5bba6f33-aa5c-40fe-8361-ae4f74444b6c',
        'url': '/Ordner/5bba6f33aa5c40fe8361ae4f74444b6c',
      }),
    ]),
    'ende': None,
    'geschaeftseigner': dict({
      'displayName': 'Generalsekretariat; GS',
      'guid': 'e59bbb03-d396-40c6-b0f2-61a46862a0fa',
      'url': '/Organisationseinheit/e59bbb03d39640c6b0f261a46862a0fa',
    }),
    'geschaeftsstatus': 'InBearbeitung',
    'guid': 'b8d91303-8f98-44ab-bdac-67513a9c04e7',
    'laufnummer': '2025-STA-149',
    'lifecycleStatus': 'InBearbeitung',
    'parentkey': 'ebaube:1',
    'signatur': None,
    'titel': 'Miss south speak industry. Region participant report. Responsibility worker pressure factor. Conference onto fear respond wear wide.',
    'typeName': 'Geschäft',
    'version': 0,
    'zugriffsteuerung': 'Restriktiv',
  })
# ---
# name: test_initial_sync[municipality-True-False]
  dict({
    'beginn': '12.05.2025',
    'bemerkung': None,
    'customArchiviert': False,
    'customArchivnummer': None,
    'customDringlDir': False,
    'customDringlVorstoesser': False,
    'customDringlgewaehrt': False,
    'customErledigungsart': None,
    'customFederfuehrendesAmt': dict({
      'displayName': 'Amt für Digitalisierungsfragen',
      'guid': '035641ae-a54a-49f7-bb39-a4e926d17c1e',
      'url': '/Amt/035641aea54a49f7bb39a4e926d17c1e',
    }),
    'customGemeinde': None,
    'customGeschaeftsart': dict({
      'displayName': '14.310 Baugesuch',
      'guid': '5afa4fc5-153d-48e9-b273-89de156faa39',
      'url': '/Geschäftsart/5afa4fc5153d48e9b27389de156faa39',
    }),
    'customGeschaeftsverantwortung': None,
    'customGrundbucheintrag': True,
    'customHerkunft': dict({
      'displayName': 'Gemeinden/Körperschaften',
      'guid': '52c4318d-77cc-4163-bf82-eaa5ab68c43a',
      'url': '/Herkunft/52c4318d77cc4163bf82eaa5ab68c43a',
    }),
    'customHerkunftsNummer': '2025-1',
    'customKoordinatenX': 134333.4,
    'customKoordinatenY': 99991230.0,
    'customOrdnungsgemaess': False,
    'customParzellenNr': None,
    'customPoststempel': '14.05.2025',
    'customRRGeschaeft': False,
    'customRegistraturplan': dict({
      'displayName': '4-6-1 Verfügungen, Fach- und Amtsberichte, Stellungnahmen',
      'guid': '582b31c8-32b3-41f2-9fe9-283ad6fbbd8d',
      'url': '/Ordnungssystem/582b31c832b341f29fe9283ad6fbbd8d',
    }),
    'customSachbearbeiter': dict({
      'displayName': 'Zweiter Tester; test2',
      'guid': '0eae6e4f-3032-4b10-bb10-f1ad5000cf4c',
      'url': '/Benutzer:in/0eae6e4f30324b10bb10f1ad5000cf4c',
    }),
    'customUeberwiesen': False,
    'customVerfahrenseingang': '14.05.2025',
    'customVerfahrensende': None,
    'customVerfahrensstand': dict({
      'displayName': 'Geschäft eröffnet',
      'guid': '500fcc48-e9de-4b17-96d0-85f7dd001613',
      'url': '/Verfahrensstand/500fcc48e9de4b1796d085f7dd001613',
    }),
    'customVorstossBeantwortet': False,
    'customWiedereingang': None,
    'custommitVoranfrage': False,
    'dokumenteExplorer': list([
      dict({
        'displayName': '1 Baugesuch Parzelle(n) 473, 2592',
        'guid': 'e68d45a7-7c98-4549-b2ec-92d0353e170a',
        'url': '/Ordner/e68d45a77c984549b2ec92d0353e170a',
      }),
    ]),
    'ende': None,
    'geschaeftseigner': dict({
      'displayName': 'Generalsekretariat; GS',
      'guid': 'e59bbb03-d396-40c6-b0f2-61a46862a0fa',
      'url': '/Organisationseinheit/e59bbb03d39640c6b0f261a46862a0fa',
    }),
    'geschaeftsstatus': 'InBearbeitung',
    'guid': 'fb5bf9c6-c91c-4b43-bf86-796846d6b613',
    'laufnummer': '2025-STA-148',
    'lifecycleStatus': 'InBearbeitung',
    'parentkey': 'ebaube:1',
    'signatur': None,
    'titel': 'Miss south speak industry. Region participant report. Responsibility worker pressure factor. Conference onto fear respond wear wide.',
    'typeName': 'Geschäft',
    'version': 0,
    'zugriffsteuerung': 'Restriktiv',
  })
# ---
# name: test_initial_sync[municipality-True-True]
  dict({
    'beginn': '12.05.2025',
    'bemerkung': None,
    'customArchiviert': False,
    'customArchivnummer': None,
    'customDringlDir': False,
    'customDringlVorstoesser': False,
    'customDringlgewaehrt': False,
    'customErledigungsart': dict({
      'displayName': 'Art. 16/22 RPG negativ',
      'guid': '4d84540b-9c2d-43ea-9ae3-3ca10cb0cbb7',
      'url': '/Erledigungsart/4d84540b9c2d43ea9ae33ca10cb0cbb7',
    }),
    'customFederfuehrendesAmt': dict({
      'displayName': 'Amt für Digitalisierungsfragen',
      'guid': '035641ae-a54a-49f7-bb39-a4e926d17c1e',
      'url': '/Amt/035641aea54a49f7bb39a4e926d17c1e',
    }),
    'customGemeinde': None,
    'customGeschaeftsart': dict({
      'displayName': '14.310 Baugesuch',
      'guid': '5afa4fc5-153d-48e9-b273-89de156faa39',
      'url': '/Geschäftsart/5afa4fc5153d48e9b27389de156faa39',
    }),
    'customGeschaeftsverantwortung': None,
    'customGrundbucheintrag': True,
    'customHerkunft': dict({
      'displayName': 'Gemeinden/Körperschaften',
      'guid': '52c4318d-77cc-4163-bf82-eaa5ab68c43a',
      'url': '/Herkunft/52c4318d77cc4163bf82eaa5ab68c43a',
    }),
    'customHerkunftsNummer': '2025-1',
    'customKoordinatenX': 134333.4,
    'customKoordinatenY': 99991230.0,
    'customOrdnungsgemaess': False,
    'customParzellenNr': None,
    'customPoststempel': '14.05.2025',
    'customRRGeschaeft': False,
    'customRegistraturplan': dict({
      'displayName': '4-6-1 Verfügungen, Fach- und Amtsberichte, Stellungnahmen',
      'guid': '582b31c8-32b3-41f2-9fe9-283ad6fbbd8d',
      'url': '/Ordnungssystem/582b31c832b341f29fe9283ad6fbbd8d',
    }),
    'customSachbearbeiter': dict({
      'displayName': 'Zweiter Tester; test2',
      'guid': '0eae6e4f-3032-4b10-bb10-f1ad5000cf4c',
      'url': '/Benutzer:in/0eae6e4f30324b10bb10f1ad5000cf4c',
    }),
    'customUeberwiesen': False,
    'customVerfahrenseingang': '14.05.2025',
    'customVerfahrensende': None,
    'customVerfahrensstand': dict({
      'displayName': 'Geschäft eröffnet',
      'guid': '500fcc48-e9de-4b17-96d0-85f7dd001613',
      'url': '/Verfahrensstand/500fcc48e9de4b1796d085f7dd001613',
    }),
    'customVorstossBeantwortet': False,
    'customWiedereingang': None,
    'custommitVoranfrage': False,
    'dokumenteExplorer': list([
      dict({
        'displayName': '1 Baugesuch Parzelle(n) 473, 2592',
        'guid': '3c3b7d53-e24c-4fbb-923d-fcf79dfad280',
        'url': '/Ordner/3c3b7d53e24c4fbb923dfcf79dfad280',
      }),
    ]),
    'ende': None,
    'geschaeftseigner': dict({
      'displayName': 'Generalsekretariat; GS',
      'guid': 'e59bbb03-d396-40c6-b0f2-61a46862a0fa',
      'url': '/Organisationseinheit/e59bbb03d39640c6b0f261a46862a0fa',
    }),
    'geschaeftsstatus': 'InBearbeitung',
    'guid': '67df05e9-3068-4ee8-acd5-ffca24f6fa99',
    'laufnummer': '2025-STA-147',
    'lifecycleStatus': 'InBearbeitung',
    'parentkey': 'ebaube:1',
    'signatur': None,
    'titel': 'Miss south speak industry. Region participant report. Responsibility worker pressure factor. Conference onto fear respond wear wide.',
    'typeName': 'Geschäft',
    'version': 0,
    'zugriffsteuerung': 'Restriktiv',
  })
# ---
# name: test_initial_sync[rsta-False-False]
  dict({
    'beginn': '12.05.2025',
    'bemerkung': None,
    'customArchiviert': False,
    'customArchivnummer': None,
    'customDringlDir': False,
    'customDringlVorstoesser': False,
    'customDringlgewaehrt': False,
    'customErledigungsart': None,
    'customFederfuehrendesAmt': dict({
      'displayName': 'Amt für Digitalisierungsfragen',
      'guid': '035641ae-a54a-49f7-bb39-a4e926d17c1e',
      'url': '/Amt/035641aea54a49f7bb39a4e926d17c1e',
    }),
    'customGemeinde': None,
    'customGeschaeftsart': dict({
      'displayName': '14.310 Baugesuch',
      'guid': '5afa4fc5-153d-48e9-b273-89de156faa39',
      'url': '/Geschäftsart/5afa4fc5153d48e9b27389de156faa39',
    }),
    'customGeschaeftsverantwortung': None,
    'customGrundbucheintrag': True,
    'customHerkunft': dict({
      'displayName': 'RSTAs',
      'guid': '52f728f5-9e32-46a2-9d0c-d35098194d34',
      'url': '/Herkunft/52f728f59e3246a29d0cd35098194d34',
    }),
    'customHerkunftsNummer': '2025-1',
    'customKoordinatenX': 134333.4,
    'customKoordinatenY': 99991230.0,
    'customOrdnungsgemaess': False,
    'customParzellenNr': None,
    'customPoststempel': '14.05.2025',
    'customRRGeschaeft': False,
    'customRegistraturplan': dict({
      'displayName': '4-6-1 Verfügungen, Fach- und Amtsberichte, Stellungnahmen',
      'guid': '582b31c8-32b3-41f2-9fe9-283ad6fbbd8d',
      'url': '/Ordnungssystem/582b31c832b341f29fe9283ad6fbbd8d',
    }),
    'customSachbearbeiter': None,
    'customUeberwiesen': False,
    'customVerfahrenseingang': '14.05.2025',
    'customVerfahrensende': None,
    'customVerfahrensstand': dict({
      'displayName': 'Geschäft eröffnet',
      'guid': '500fcc48-e9de-4b17-96d0-85f7dd001613',
      'url': '/Verfahrensstand/500fcc48e9de4b1796d085f7dd001613',
    }),
    'customVorstossBeantwortet': False,
    'customWiedereingang': None,
    'custommitVoranfrage': False,
    'dokumenteExplorer': list([
      dict({
        'displayName': '1 Baugesuch Parzelle(n) 473, 2592',
        'guid': '26cebc94-fd0c-4ea3-a320-f3a69d5381be',
        'url': '/Ordner/26cebc94fd0c4ea3a320f3a69d5381be',
      }),
    ]),
    'ende': None,
    'geschaeftseigner': dict({
      'displayName': 'Generalsekretariat; GS',
      'guid': 'e59bbb03-d396-40c6-b0f2-61a46862a0fa',
      'url': '/Organisationseinheit/e59bbb03d39640c6b0f261a46862a0fa',
    }),
    'geschaeftsstatus': 'InBearbeitung',
    'guid': 'b210fa31-fad5-45fa-b901-f5c23247bea3',
    'laufnummer': '2025-STA-154',
    'lifecycleStatus': 'InBearbeitung',
    'parentkey': 'ebaube:1',
    'signatur': None,
    'titel': 'Miss south speak industry. Region participant report. Responsibility worker pressure factor. Conference onto fear respond wear wide.',
    'typeName': 'Geschäft',
    'version': 0,
    'zugriffsteuerung': 'Restriktiv',
  })
# ---
# name: test_initial_sync[rsta-False-True]
  dict({
    'beginn': '12.05.2025',
    'bemerkung': None,
    'customArchiviert': False,
    'customArchivnummer': None,
    'customDringlDir': False,
    'customDringlVorstoesser': False,
    'customDringlgewaehrt': False,
    'customErledigungsart': dict({
      'displayName': 'Art. 16/22 RPG negativ',
      'guid': '4d84540b-9c2d-43ea-9ae3-3ca10cb0cbb7',
      'url': '/Erledigungsart/4d84540b9c2d43ea9ae33ca10cb0cbb7',
    }),
    'customFederfuehrendesAmt': dict({
      'displayName': 'Amt für Digitalisierungsfragen',
      'guid': '035641ae-a54a-49f7-bb39-a4e926d17c1e',
      'url': '/Amt/035641aea54a49f7bb39a4e926d17c1e',
    }),
    'customGemeinde': None,
    'customGeschaeftsart': dict({
      'displayName': '14.310 Baugesuch',
      'guid': '5afa4fc5-153d-48e9-b273-89de156faa39',
      'url': '/Geschäftsart/5afa4fc5153d48e9b27389de156faa39',
    }),
    'customGeschaeftsverantwortung': None,
    'customGrundbucheintrag': True,
    'customHerkunft': dict({
      'displayName': 'RSTAs',
      'guid': '52f728f5-9e32-46a2-9d0c-d35098194d34',
      'url': '/Herkunft/52f728f59e3246a29d0cd35098194d34',
    }),
    'customHerkunftsNummer': '2025-1',
    'customKoordinatenX': 134333.4,
    'customKoordinatenY': 99991230.0,
    'customOrdnungsgemaess': False,
    'customParzellenNr': None,
    'customPoststempel': '14.05.2025',
    'customRRGeschaeft': False,
    'customRegistraturplan': dict({
      'displayName': '4-6-1 Verfügungen, Fach- und Amtsberichte, Stellungnahmen',
      'guid': '582b31c8-32b3-41f2-9fe9-283ad6fbbd8d',
      'url': '/Ordnungssystem/582b31c832b341f29fe9283ad6fbbd8d',
    }),
    'customSachbearbeiter': None,
    'customUeberwiesen': False,
    'customVerfahrenseingang': '14.05.2025',
    'customVerfahrensende': None,
    'customVerfahrensstand': dict({
      'displayName': 'Geschäft eröffnet',
      'guid': '500fcc48-e9de-4b17-96d0-85f7dd001613',
      'url': '/Verfahrensstand/500fcc48e9de4b1796d085f7dd001613',
    }),
    'customVorstossBeantwortet': False,
    'customWiedereingang': None,
    'custommitVoranfrage': False,
    'dokumenteExplorer': list([
      dict({
        'displayName': '1 Baugesuch Parzelle(n) 473, 2592',
        'guid': '73910d47-3daa-4d18-8bc0-0c92d40c52a1',
        'url': '/Ordner/73910d473daa4d188bc00c92d40c52a1',
      }),
    ]),
    'ende': None,
    'geschaeftseigner': dict({
      'displayName': 'Generalsekretariat; GS',
      'guid': 'e59bbb03-d396-40c6-b0f2-61a46862a0fa',
      'url': '/Organisationseinheit/e59bbb03d39640c6b0f261a46862a0fa',
    }),
    'geschaeftsstatus': 'InBearbeitung',
    'guid': '81cb8c12-5779-4fd1-a0a2-1f736a78b9e9',
    'laufnummer': '2025-STA-153',
    'lifecycleStatus': 'InBearbeitung',
    'parentkey': 'ebaube:1',
    'signatur': None,
    'titel': 'Miss south speak industry. Region participant report. Responsibility worker pressure factor. Conference onto fear respond wear wide.',
    'typeName': 'Geschäft',
    'version': 0,
    'zugriffsteuerung': 'Restriktiv',
  })
# ---
# name: test_initial_sync[rsta-True-False]
  dict({
    'beginn': '12.05.2025',
    'bemerkung': None,
    'customArchiviert': False,
    'customArchivnummer': None,
    'customDringlDir': False,
    'customDringlVorstoesser': False,
    'customDringlgewaehrt': False,
    'customErledigungsart': None,
    'customFederfuehrendesAmt': dict({
      'displayName': 'Amt für Digitalisierungsfragen',
      'guid': '035641ae-a54a-49f7-bb39-a4e926d17c1e',
      'url': '/Amt/035641aea54a49f7bb39a4e926d17c1e',
    }),
    'customGemeinde': None,
    'customGeschaeftsart': dict({
      'displayName': '14.310 Baugesuch',
      'guid': '5afa4fc5-153d-48e9-b273-89de156faa39',
      'url': '/Geschäftsart/5afa4fc5153d48e9b27389de156faa39',
    }),
    'customGeschaeftsverantwortung': None,
    'customGrundbucheintrag': True,
    'customHerkunft': dict({
      'displayName': 'RSTAs',
      'guid': '52f728f5-9e32-46a2-9d0c-d35098194d34',
      'url': '/Herkunft/52f728f59e3246a29d0cd35098194d34',
    }),
    'customHerkunftsNummer': '2025-1',
    'customKoordinatenX': 134333.4,
    'customKoordinatenY': 99991230.0,
    'customOrdnungsgemaess': False,
    'customParzellenNr': None,
    'customPoststempel': '14.05.2025',
    'customRRGeschaeft': False,
    'customRegistraturplan': dict({
      'displayName': '4-6-1 Verfügungen, Fach- und Amtsberichte, Stellungnahmen',
      'guid': '582b31c8-32b3-41f2-9fe9-283ad6fbbd8d',
      'url': '/Ordnungssystem/582b31c832b341f29fe9283ad6fbbd8d',
    }),
    'customSachbearbeiter': dict({
      'displayName': 'Zweiter Tester; test2',
      'guid': '0eae6e4f-3032-4b10-bb10-f1ad5000cf4c',
      'url': '/Benutzer:in/0eae6e4f30324b10bb10f1ad5000cf4c',
    }),
    'customUeberwiesen': False,
    'customVerfahrenseingang': '14.05.2025',
    'customVerfahrensende': None,
    'customVerfahrensstand': dict({
      'displayName': 'Geschäft eröffnet',
      'guid': '500fcc48-e9de-4b17-96d0-85f7dd001613',
      'url': '/Verfahrensstand/500fcc48e9de4b1796d085f7dd001613',
    }),
    'customVorstossBeantwortet': False,
    'customWiedereingang': None,
    'custommitVoranfrage': False,
    'dokumenteExplorer': list([
      dict({
        'displayName': '1 Baugesuch Parzelle(n) 473, 2592',
        'guid': 'd8187bde-395d-4d45-ab42-d073ae888a78',
        'url': '/Ordner/d8187bde395d4d45ab42d073ae888a78',
      }),
    ]),
    'ende': None,
    'geschaeftseigner': dict({
      'displayName': 'Generalsekretariat; GS',
      'guid': 'e59bbb03-d396-40c6-b0f2-61a46862a0fa',
      'url': '/Organisationseinheit/e59bbb03d39640c6b0f261a46862a0fa',
    }),
    'geschaeftsstatus': 'InBearbeitung',
    'guid': '91a324b1-6158-4663-9e93-0fdce14e7262',
    'laufnummer': '2025-STA-152',
    'lifecycleStatus': 'InBearbeitung',
    'parentkey': 'ebaube:1',
    'signatur': None,
    'titel': 'Miss south speak industry. Region participant report. Responsibility worker pressure factor. Conference onto fear respond wear wide.',
    'typeName': 'Geschäft',
    'version': 0,
    'zugriffsteuerung': 'Restriktiv',
  })
# ---
# name: test_initial_sync[rsta-True-True]
  dict({
    'beginn': '12.05.2025',
    'bemerkung': None,
    'customArchiviert': False,
    'customArchivnummer': None,
    'customDringlDir': False,
    'customDringlVorstoesser': False,
    'customDringlgewaehrt': False,
    'customErledigungsart': dict({
      'displayName': 'Art. 16/22 RPG negativ',
      'guid': '4d84540b-9c2d-43ea-9ae3-3ca10cb0cbb7',
      'url': '/Erledigungsart/4d84540b9c2d43ea9ae33ca10cb0cbb7',
    }),
    'customFederfuehrendesAmt': dict({
      'displayName': 'Amt für Digitalisierungsfragen',
      'guid': '035641ae-a54a-49f7-bb39-a4e926d17c1e',
      'url': '/Amt/035641aea54a49f7bb39a4e926d17c1e',
    }),
    'customGemeinde': None,
    'customGeschaeftsart': dict({
      'displayName': '14.310 Baugesuch',
      'guid': '5afa4fc5-153d-48e9-b273-89de156faa39',
      'url': '/Geschäftsart/5afa4fc5153d48e9b27389de156faa39',
    }),
    'customGeschaeftsverantwortung': None,
    'customGrundbucheintrag': True,
    'customHerkunft': dict({
      'displayName': 'RSTAs',
      'guid': '52f728f5-9e32-46a2-9d0c-d35098194d34',
      'url': '/Herkunft/52f728f59e3246a29d0cd35098194d34',
    }),
    'customHerkunftsNummer': '2025-1',
    'customKoordinatenX': 134333.4,
    'customKoordinatenY': 99991230.0,
    'customOrdnungsgemaess': False,
    'customParzellenNr': None,
    'customPoststempel': '14.05.2025',
    'customRRGeschaeft': False,
    'customRegistraturplan': dict({
      'displayName': '4-6-1 Verfügungen, Fach- und Amtsberichte, Stellungnahmen',
      'guid': '582b31c8-32b3-41f2-9fe9-283ad6fbbd8d',
      'url': '/Ordnungssystem/582b31c832b341f29fe9283ad6fbbd8d',
    }),
    'customSachbearbeiter': dict({
      'displayName': 'Zweiter Tester; test2',
      'guid': '0eae6e4f-3032-4b10-bb10-f1ad5000cf4c',
      'url': '/Benutzer:in/0eae6e4f30324b10bb10f1ad5000cf4c',
    }),
    'customUeberwiesen': False,
    'customVerfahrenseingang': '14.05.2025',
    'customVerfahrensende': None,
    'customVerfahrensstand': dict({
      'displayName': 'Geschäft eröffnet',
      'guid': '500fcc48-e9de-4b17-96d0-85f7dd001613',
      'url': '/Verfahrensstand/500fcc48e9de4b1796d085f7dd001613',
    }),
    'customVorstossBeantwortet': False,
    'customWiedereingang': None,
    'custommitVoranfrage': False,
    'dokumenteExplorer': list([
      dict({
        'displayName': '1 Baugesuch Parzelle(n) 473, 2592',
        'guid': 'c91f9334-e358-46a4-89a7-c91062e957ed',
        'url': '/Ordner/c91f9334e35846a489a7c91062e957ed',
      }),
    ]),
    'ende': None,
    'geschaeftseigner': dict({
      'displayName': 'Generalsekretariat; GS',
      'guid': 'e59bbb03-d396-40c6-b0f2-61a46862a0fa',
      'url': '/Organisationseinheit/e59bbb03d39640c6b0f261a46862a0fa',
    }),
    'geschaeftsstatus': 'InBearbeitung',
    'guid': '556cdd42-4f09-4a45-825a-3342a82ff684',
    'laufnummer': '2025-STA-151',
    'lifecycleStatus': 'InBearbeitung',
    'parentkey': 'ebaube:1',
    'signatur': None,
    'titel': 'Miss south speak industry. Region participant report. Responsibility worker pressure factor. Conference onto fear respond wear wide.',
    'typeName': 'Geschäft',
    'version': 0,
    'zugriffsteuerung': 'Restriktiv',
  })
# ---
# name: test_update_geschaeft[municipality-False-False]
  dict({
    'beginn': '14.05.2025',
    'bemerkung': None,
    'customArchiviert': False,
    'customArchivnummer': None,
    'customDringlDir': False,
    'customDringlVorstoesser': False,
    'customDringlgewaehrt': False,
    'customErledigungsart': None,
    'customFederfuehrendesAmt': dict({
      'displayName': 'Amt für Digitalisierungsfragen',
      'guid': '035641ae-a54a-49f7-bb39-a4e926d17c1e',
      'url': '/Amt/035641aea54a49f7bb39a4e926d17c1e',
    }),
    'customGemeinde': None,
    'customGeschaeftsart': None,
    'customGeschaeftsverantwortung': None,
    'customGrundbucheintrag': True,
    'customHerkunft': None,
    'customHerkunftsNummer': '5000-1',
    'customKoordinatenX': 134333.4,
    'customKoordinatenY': 99991230.0,
    'customOrdnungsgemaess': False,
    'customParzellenNr': None,
    'customPoststempel': None,
    'customRRGeschaeft': False,
    'customRegistraturplan': dict({
      'displayName': '4-6-1 Verfügungen, Fach- und Amtsberichte, Stellungnahmen',
      'guid': '582b31c8-32b3-41f2-9fe9-283ad6fbbd8d',
      'url': '/Ordnungssystem/582b31c832b341f29fe9283ad6fbbd8d',
    }),
    'customSachbearbeiter': None,
    'customUeberwiesen': False,
    'customVerfahrenseingang': '14.05.2025',
    'customVerfahrensende': '14.05.2026',
    'customVerfahrensstand': None,
    'customVorstossBeantwortet': False,
    'customWiedereingang': None,
    'custommitVoranfrage': False,
    'dokumenteExplorer': list([
      dict({
        'displayName': '1 Baugesuch Parzelle(n) 473, 2592',
        'guid': '8e85cb29-94ee-46b3-a500-39d9110795f0',
        'url': '/Ordner/8e85cb2994ee46b3a50039d9110795f0',
      }),
    ]),
    'ende': None,
    'geschaeftseigner': dict({
      'displayName': 'Trados Übersetzungsoe; TRADOS',
      'guid': '6e2c8f58-f9ec-4a58-b467-c47313e0bf1b',
      'url': '/Organisationseinheit/6e2c8f58f9ec4a58b467c47313e0bf1b',
    }),
    'geschaeftsstatus': 'InBearbeitung',
    'guid': 'a901b45a-0389-4c54-9298-684ad2d6e92f',
    'laufnummer': '2025-STA-155',
    'lifecycleStatus': 'InBearbeitung',
    'parentkey': 'ebaube:1',
    'signatur': None,
    'titel': 'adfinis-test 2025-05-14T13:00:15',
    'typeName': 'Geschäft',
    'version': 2,
    'zugriffsteuerung': 'Offen',
  })
# ---
# name: test_update_geschaeft[municipality-False-True]
  dict({
    'beginn': '14.05.2025',
    'bemerkung': None,
    'customArchiviert': False,
    'customArchivnummer': None,
    'customDringlDir': False,
    'customDringlVorstoesser': False,
    'customDringlgewaehrt': False,
    'customErledigungsart': dict({
      'displayName': 'Art. 16/22 RPG negativ',
      'guid': '4d84540b-9c2d-43ea-9ae3-3ca10cb0cbb7',
      'url': '/Erledigungsart/4d84540b9c2d43ea9ae33ca10cb0cbb7',
    }),
    'customFederfuehrendesAmt': dict({
      'displayName': 'Amt für Digitalisierungsfragen',
      'guid': '035641ae-a54a-49f7-bb39-a4e926d17c1e',
      'url': '/Amt/035641aea54a49f7bb39a4e926d17c1e',
    }),
    'customGemeinde': None,
    'customGeschaeftsart': None,
    'customGeschaeftsverantwortung': None,
    'customGrundbucheintrag': True,
    'customHerkunft': None,
    'customHerkunftsNummer': '5000-1',
    'customKoordinatenX': 134333.4,
    'customKoordinatenY': 99991230.0,
    'customOrdnungsgemaess': False,
    'customParzellenNr': None,
    'customPoststempel': None,
    'customRRGeschaeft': False,
    'customRegistraturplan': dict({
      'displayName': '4-6-1 Verfügungen, Fach- und Amtsberichte, Stellungnahmen',
      'guid': '582b31c8-32b3-41f2-9fe9-283ad6fbbd8d',
      'url': '/Ordnungssystem/582b31c832b341f29fe9283ad6fbbd8d',
    }),
    'customSachbearbeiter': None,
    'customUeberwiesen': False,
    'customVerfahrenseingang': '14.05.2025',
    'customVerfahrensende': '14.05.2026',
    'customVerfahrensstand': None,
    'customVorstossBeantwortet': False,
    'customWiedereingang': None,
    'custommitVoranfrage': False,
    'dokumenteExplorer': list([
      dict({
        'displayName': '1 Baugesuch Parzelle(n) 473, 2592',
        'guid': '8457e5b1-9c38-4eaf-9dcc-80dcc8df3ee7',
        'url': '/Ordner/8457e5b19c384eaf9dcc80dcc8df3ee7',
      }),
    ]),
    'ende': None,
    'geschaeftseigner': dict({
      'displayName': 'Trados Übersetzungsoe; TRADOS',
      'guid': '6e2c8f58-f9ec-4a58-b467-c47313e0bf1b',
      'url': '/Organisationseinheit/6e2c8f58f9ec4a58b467c47313e0bf1b',
    }),
    'geschaeftsstatus': 'InBearbeitung',
    'guid': '26ff7f14-fa7a-43c1-bd5f-adcc98d88e71',
    'laufnummer': '2025-STA-155',
    'lifecycleStatus': 'InBearbeitung',
    'parentkey': 'ebaube:1',
    'signatur': None,
    'titel': 'adfinis-test 2025-05-14T13:00:15',
    'typeName': 'Geschäft',
    'version': 2,
    'zugriffsteuerung': 'Offen',
  })
# ---
# name: test_update_geschaeft[municipality-True-False]
  dict({
    'beginn': '14.05.2025',
    'bemerkung': None,
    'customArchiviert': False,
    'customArchivnummer': None,
    'customDringlDir': False,
    'customDringlVorstoesser': False,
    'customDringlgewaehrt': False,
    'customErledigungsart': None,
    'customFederfuehrendesAmt': dict({
      'displayName': 'Amt für Digitalisierungsfragen',
      'guid': '035641ae-a54a-49f7-bb39-a4e926d17c1e',
      'url': '/Amt/035641aea54a49f7bb39a4e926d17c1e',
    }),
    'customGemeinde': None,
    'customGeschaeftsart': None,
    'customGeschaeftsverantwortung': None,
    'customGrundbucheintrag': True,
    'customHerkunft': None,
    'customHerkunftsNummer': '5000-1',
    'customKoordinatenX': 134333.4,
    'customKoordinatenY': 99991230.0,
    'customOrdnungsgemaess': False,
    'customParzellenNr': None,
    'customPoststempel': None,
    'customRRGeschaeft': False,
    'customRegistraturplan': dict({
      'displayName': '4-6-1 Verfügungen, Fach- und Amtsberichte, Stellungnahmen',
      'guid': '582b31c8-32b3-41f2-9fe9-283ad6fbbd8d',
      'url': '/Ordnungssystem/582b31c832b341f29fe9283ad6fbbd8d',
    }),
    'customSachbearbeiter': dict({
      'displayName': 'Zweiter Tester; test2',
      'guid': '0eae6e4f-3032-4b10-bb10-f1ad5000cf4c',
      'url': '/Benutzer:in/0eae6e4f30324b10bb10f1ad5000cf4c',
    }),
    'customUeberwiesen': False,
    'customVerfahrenseingang': '14.05.2025',
    'customVerfahrensende': '14.05.2026',
    'customVerfahrensstand': None,
    'customVorstossBeantwortet': False,
    'customWiedereingang': None,
    'custommitVoranfrage': False,
    'dokumenteExplorer': list([
      dict({
        'displayName': '1 Baugesuch Parzelle(n) 473, 2592',
        'guid': '83034098-d97c-4808-9777-2884a20ebbaf',
        'url': '/Ordner/83034098d97c480897772884a20ebbaf',
      }),
    ]),
    'ende': None,
    'geschaeftseigner': dict({
      'displayName': 'Trados Übersetzungsoe; TRADOS',
      'guid': '6e2c8f58-f9ec-4a58-b467-c47313e0bf1b',
      'url': '/Organisationseinheit/6e2c8f58f9ec4a58b467c47313e0bf1b',
    }),
    'geschaeftsstatus': 'InBearbeitung',
    'guid': 'f010c1eb-d68d-4b56-bd59-63a088c2e938',
    'laufnummer': '2025-STA-155',
    'lifecycleStatus': 'InBearbeitung',
    'parentkey': 'ebaube:1',
    'signatur': None,
    'titel': 'adfinis-test 2025-05-14T13:00:15',
    'typeName': 'Geschäft',
    'version': 2,
    'zugriffsteuerung': 'Offen',
  })
# ---
# name: test_update_geschaeft[municipality-True-True]
  dict({
    'beginn': '14.05.2025',
    'bemerkung': None,
    'customArchiviert': False,
    'customArchivnummer': None,
    'customDringlDir': False,
    'customDringlVorstoesser': False,
    'customDringlgewaehrt': False,
    'customErledigungsart': dict({
      'displayName': 'Art. 16/22 RPG negativ',
      'guid': '4d84540b-9c2d-43ea-9ae3-3ca10cb0cbb7',
      'url': '/Erledigungsart/4d84540b9c2d43ea9ae33ca10cb0cbb7',
    }),
    'customFederfuehrendesAmt': dict({
      'displayName': 'Amt für Digitalisierungsfragen',
      'guid': '035641ae-a54a-49f7-bb39-a4e926d17c1e',
      'url': '/Amt/035641aea54a49f7bb39a4e926d17c1e',
    }),
    'customGemeinde': None,
    'customGeschaeftsart': None,
    'customGeschaeftsverantwortung': None,
    'customGrundbucheintrag': True,
    'customHerkunft': None,
    'customHerkunftsNummer': '5000-1',
    'customKoordinatenX': 134333.4,
    'customKoordinatenY': 99991230.0,
    'customOrdnungsgemaess': False,
    'customParzellenNr': None,
    'customPoststempel': None,
    'customRRGeschaeft': False,
    'customRegistraturplan': dict({
      'displayName': '4-6-1 Verfügungen, Fach- und Amtsberichte, Stellungnahmen',
      'guid': '582b31c8-32b3-41f2-9fe9-283ad6fbbd8d',
      'url': '/Ordnungssystem/582b31c832b341f29fe9283ad6fbbd8d',
    }),
    'customSachbearbeiter': dict({
      'displayName': 'Zweiter Tester; test2',
      'guid': '0eae6e4f-3032-4b10-bb10-f1ad5000cf4c',
      'url': '/Benutzer:in/0eae6e4f30324b10bb10f1ad5000cf4c',
    }),
    'customUeberwiesen': False,
    'customVerfahrenseingang': '14.05.2025',
    'customVerfahrensende': '14.05.2026',
    'customVerfahrensstand': None,
    'customVorstossBeantwortet': False,
    'customWiedereingang': None,
    'custommitVoranfrage': False,
    'dokumenteExplorer': list([
      dict({
        'displayName': '1 Baugesuch Parzelle(n) 473, 2592',
        'guid': '4ae7b1a5-a777-480f-b253-19eb50f3a81b',
        'url': '/Ordner/4ae7b1a5a777480fb25319eb50f3a81b',
      }),
    ]),
    'ende': None,
    'geschaeftseigner': dict({
      'displayName': 'Trados Übersetzungsoe; TRADOS',
      'guid': '6e2c8f58-f9ec-4a58-b467-c47313e0bf1b',
      'url': '/Organisationseinheit/6e2c8f58f9ec4a58b467c47313e0bf1b',
    }),
    'geschaeftsstatus': 'InBearbeitung',
    'guid': 'd24d6f7a-11b3-4159-918d-cbea1c344311',
    'laufnummer': '2025-STA-155',
    'lifecycleStatus': 'InBearbeitung',
    'parentkey': 'ebaube:1',
    'signatur': None,
    'titel': 'adfinis-test 2025-05-14T13:00:15',
    'typeName': 'Geschäft',
    'version': 2,
    'zugriffsteuerung': 'Offen',
  })
# ---
# name: test_update_geschaeft[rsta-False-False]
  dict({
    'beginn': '14.05.2025',
    'bemerkung': None,
    'customArchiviert': False,
    'customArchivnummer': None,
    'customDringlDir': False,
    'customDringlVorstoesser': False,
    'customDringlgewaehrt': False,
    'customErledigungsart': None,
    'customFederfuehrendesAmt': dict({
      'displayName': 'Amt für Digitalisierungsfragen',
      'guid': '035641ae-a54a-49f7-bb39-a4e926d17c1e',
      'url': '/Amt/035641aea54a49f7bb39a4e926d17c1e',
    }),
    'customGemeinde': None,
    'customGeschaeftsart': None,
    'customGeschaeftsverantwortung': None,
    'customGrundbucheintrag': True,
    'customHerkunft': None,
    'customHerkunftsNummer': '5000-1',
    'customKoordinatenX': 134333.4,
    'customKoordinatenY': 99991230.0,
    'customOrdnungsgemaess': False,
    'customParzellenNr': None,
    'customPoststempel': None,
    'customRRGeschaeft': False,
    'customRegistraturplan': dict({
      'displayName': '4-6-1 Verfügungen, Fach- und Amtsberichte, Stellungnahmen',
      'guid': '582b31c8-32b3-41f2-9fe9-283ad6fbbd8d',
      'url': '/Ordnungssystem/582b31c832b341f29fe9283ad6fbbd8d',
    }),
    'customSachbearbeiter': None,
    'customUeberwiesen': False,
    'customVerfahrenseingang': '14.05.2025',
    'customVerfahrensende': '14.05.2026',
    'customVerfahrensstand': None,
    'customVorstossBeantwortet': False,
    'customWiedereingang': None,
    'custommitVoranfrage': False,
    'dokumenteExplorer': list([
      dict({
        'displayName': '1 Baugesuch Parzelle(n) 473, 2592',
        'guid': 'f26fb82a-eb04-4849-a7b0-7a5eb91f9722',
        'url': '/Ordner/f26fb82aeb044849a7b07a5eb91f9722',
      }),
    ]),
    'ende': None,
    'geschaeftseigner': dict({
      'displayName': 'Trados Übersetzungsoe; TRADOS',
      'guid': '6e2c8f58-f9ec-4a58-b467-c47313e0bf1b',
      'url': '/Organisationseinheit/6e2c8f58f9ec4a58b467c47313e0bf1b',
    }),
    'geschaeftsstatus': 'InBearbeitung',
    'guid': 'c044e556-1b11-4fa3-9f3c-065053c4604c',
    'laufnummer': '2025-STA-155',
    'lifecycleStatus': 'InBearbeitung',
    'parentkey': 'ebaube:1',
    'signatur': None,
    'titel': 'adfinis-test 2025-05-14T13:00:15',
    'typeName': 'Geschäft',
    'version': 2,
    'zugriffsteuerung': 'Offen',
  })
# ---
# name: test_update_geschaeft[rsta-False-True]
  dict({
    'beginn': '14.05.2025',
    'bemerkung': None,
    'customArchiviert': False,
    'customArchivnummer': None,
    'customDringlDir': False,
    'customDringlVorstoesser': False,
    'customDringlgewaehrt': False,
    'customErledigungsart': dict({
      'displayName': 'Art. 16/22 RPG negativ',
      'guid': '4d84540b-9c2d-43ea-9ae3-3ca10cb0cbb7',
      'url': '/Erledigungsart/4d84540b9c2d43ea9ae33ca10cb0cbb7',
    }),
    'customFederfuehrendesAmt': dict({
      'displayName': 'Amt für Digitalisierungsfragen',
      'guid': '035641ae-a54a-49f7-bb39-a4e926d17c1e',
      'url': '/Amt/035641aea54a49f7bb39a4e926d17c1e',
    }),
    'customGemeinde': None,
    'customGeschaeftsart': None,
    'customGeschaeftsverantwortung': None,
    'customGrundbucheintrag': True,
    'customHerkunft': None,
    'customHerkunftsNummer': '5000-1',
    'customKoordinatenX': 134333.4,
    'customKoordinatenY': 99991230.0,
    'customOrdnungsgemaess': False,
    'customParzellenNr': None,
    'customPoststempel': None,
    'customRRGeschaeft': False,
    'customRegistraturplan': dict({
      'displayName': '4-6-1 Verfügungen, Fach- und Amtsberichte, Stellungnahmen',
      'guid': '582b31c8-32b3-41f2-9fe9-283ad6fbbd8d',
      'url': '/Ordnungssystem/582b31c832b341f29fe9283ad6fbbd8d',
    }),
    'customSachbearbeiter': None,
    'customUeberwiesen': False,
    'customVerfahrenseingang': '14.05.2025',
    'customVerfahrensende': '14.05.2026',
    'customVerfahrensstand': None,
    'customVorstossBeantwortet': False,
    'customWiedereingang': None,
    'custommitVoranfrage': False,
    'dokumenteExplorer': list([
      dict({
        'displayName': '1 Baugesuch Parzelle(n) 473, 2592',
        'guid': '7ade99b0-7031-47c6-8624-f4b3c4ab4750',
        'url': '/Ordner/7ade99b0703147c68624f4b3c4ab4750',
      }),
    ]),
    'ende': None,
    'geschaeftseigner': dict({
      'displayName': 'Trados Übersetzungsoe; TRADOS',
      'guid': '6e2c8f58-f9ec-4a58-b467-c47313e0bf1b',
      'url': '/Organisationseinheit/6e2c8f58f9ec4a58b467c47313e0bf1b',
    }),
    'geschaeftsstatus': 'InBearbeitung',
    'guid': '99d46484-e0d4-41bc-93c0-f857e8c47dba',
    'laufnummer': '2025-STA-155',
    'lifecycleStatus': 'InBearbeitung',
    'parentkey': 'ebaube:1',
    'signatur': None,
    'titel': 'adfinis-test 2025-05-14T13:00:15',
    'typeName': 'Geschäft',
    'version': 2,
    'zugriffsteuerung': 'Offen',
  })
# ---
# name: test_update_geschaeft[rsta-True-False]
  dict({
    'beginn': '14.05.2025',
    'bemerkung': None,
    'customArchiviert': False,
    'customArchivnummer': None,
    'customDringlDir': False,
    'customDringlVorstoesser': False,
    'customDringlgewaehrt': False,
    'customErledigungsart': None,
    'customFederfuehrendesAmt': dict({
      'displayName': 'Amt für Digitalisierungsfragen',
      'guid': '035641ae-a54a-49f7-bb39-a4e926d17c1e',
      'url': '/Amt/035641aea54a49f7bb39a4e926d17c1e',
    }),
    'customGemeinde': None,
    'customGeschaeftsart': None,
    'customGeschaeftsverantwortung': None,
    'customGrundbucheintrag': True,
    'customHerkunft': None,
    'customHerkunftsNummer': '5000-1',
    'customKoordinatenX': 134333.4,
    'customKoordinatenY': 99991230.0,
    'customOrdnungsgemaess': False,
    'customParzellenNr': None,
    'customPoststempel': None,
    'customRRGeschaeft': False,
    'customRegistraturplan': dict({
      'displayName': '4-6-1 Verfügungen, Fach- und Amtsberichte, Stellungnahmen',
      'guid': '582b31c8-32b3-41f2-9fe9-283ad6fbbd8d',
      'url': '/Ordnungssystem/582b31c832b341f29fe9283ad6fbbd8d',
    }),
    'customSachbearbeiter': dict({
      'displayName': 'Zweiter Tester; test2',
      'guid': '0eae6e4f-3032-4b10-bb10-f1ad5000cf4c',
      'url': '/Benutzer:in/0eae6e4f30324b10bb10f1ad5000cf4c',
    }),
    'customUeberwiesen': False,
    'customVerfahrenseingang': '14.05.2025',
    'customVerfahrensende': '14.05.2026',
    'customVerfahrensstand': None,
    'customVorstossBeantwortet': False,
    'customWiedereingang': None,
    'custommitVoranfrage': False,
    'dokumenteExplorer': list([
      dict({
        'displayName': '1 Baugesuch Parzelle(n) 473, 2592',
        'guid': 'a2a4eb0c-666f-4908-8873-599a185baef0',
        'url': '/Ordner/a2a4eb0c666f49088873599a185baef0',
      }),
    ]),
    'ende': None,
    'geschaeftseigner': dict({
      'displayName': 'Trados Übersetzungsoe; TRADOS',
      'guid': '6e2c8f58-f9ec-4a58-b467-c47313e0bf1b',
      'url': '/Organisationseinheit/6e2c8f58f9ec4a58b467c47313e0bf1b',
    }),
    'geschaeftsstatus': 'InBearbeitung',
    'guid': '3c7953c3-af6d-4067-b5b1-576eca056605',
    'laufnummer': '2025-STA-155',
    'lifecycleStatus': 'InBearbeitung',
    'parentkey': 'ebaube:1',
    'signatur': None,
    'titel': 'adfinis-test 2025-05-14T13:00:15',
    'typeName': 'Geschäft',
    'version': 2,
    'zugriffsteuerung': 'Offen',
  })
# ---
# name: test_update_geschaeft[rsta-True-True]
  dict({
    'beginn': '14.05.2025',
    'bemerkung': None,
    'customArchiviert': False,
    'customArchivnummer': None,
    'customDringlDir': False,
    'customDringlVorstoesser': False,
    'customDringlgewaehrt': False,
    'customErledigungsart': dict({
      'displayName': 'Art. 16/22 RPG negativ',
      'guid': '4d84540b-9c2d-43ea-9ae3-3ca10cb0cbb7',
      'url': '/Erledigungsart/4d84540b9c2d43ea9ae33ca10cb0cbb7',
    }),
    'customFederfuehrendesAmt': dict({
      'displayName': 'Amt für Digitalisierungsfragen',
      'guid': '035641ae-a54a-49f7-bb39-a4e926d17c1e',
      'url': '/Amt/035641aea54a49f7bb39a4e926d17c1e',
    }),
    'customGemeinde': None,
    'customGeschaeftsart': None,
    'customGeschaeftsverantwortung': None,
    'customGrundbucheintrag': True,
    'customHerkunft': None,
    'customHerkunftsNummer': '5000-1',
    'customKoordinatenX': 134333.4,
    'customKoordinatenY': 99991230.0,
    'customOrdnungsgemaess': False,
    'customParzellenNr': None,
    'customPoststempel': None,
    'customRRGeschaeft': False,
    'customRegistraturplan': dict({
      'displayName': '4-6-1 Verfügungen, Fach- und Amtsberichte, Stellungnahmen',
      'guid': '582b31c8-32b3-41f2-9fe9-283ad6fbbd8d',
      'url': '/Ordnungssystem/582b31c832b341f29fe9283ad6fbbd8d',
    }),
    'customSachbearbeiter': dict({
      'displayName': 'Zweiter Tester; test2',
      'guid': '0eae6e4f-3032-4b10-bb10-f1ad5000cf4c',
      'url': '/Benutzer:in/0eae6e4f30324b10bb10f1ad5000cf4c',
    }),
    'customUeberwiesen': False,
    'customVerfahrenseingang': '14.05.2025',
    'customVerfahrensende': '14.05.2026',
    'customVerfahrensstand': None,
    'customVorstossBeantwortet': False,
    'customWiedereingang': None,
    'custommitVoranfrage': False,
    'dokumenteExplorer': list([
      dict({
        'displayName': '1 Baugesuch Parzelle(n) 473, 2592',
        'guid': '2e9e81c1-11df-4474-bdf9-07a390a45208',
        'url': '/Ordner/2e9e81c111df4474bdf907a390a45208',
      }),
    ]),
    'ende': None,
    'geschaeftseigner': dict({
      'displayName': 'Trados Übersetzungsoe; TRADOS',
      'guid': '6e2c8f58-f9ec-4a58-b467-c47313e0bf1b',
      'url': '/Organisationseinheit/6e2c8f58f9ec4a58b467c47313e0bf1b',
    }),
    'geschaeftsstatus': 'InBearbeitung',
    'guid': 'ef62c713-9e3d-4d83-8f54-2d50dd2b9ac7',
    'laufnummer': '2025-STA-155',
    'lifecycleStatus': 'InBearbeitung',
    'parentkey': 'ebaube:1',
    'signatur': None,
    'titel': 'adfinis-test 2025-05-14T13:00:15',
    'typeName': 'Geschäft',
    'version': 2,
    'zugriffsteuerung': 'Offen',
  })
# ---
